--- a/docker.ipynb
+++ b/docker.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "53cb4e4e",
+   "id": "212c9240",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "09584130",
+   "id": "5493c6b7",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "7e857735",
+   "id": "383411e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "c2cd2800",
+   "id": "ee610d0b",
    "metadata": {},
    "outputs": [
     {
@@ -89,16 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "id": "6a4159dc",
+   "execution_count": 177,
+   "id": "1f3887f2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "cannot assign to operator (Temp/ipykernel_14520/3194583613.py, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\stuti\\AppData\\Local\\Temp/ipykernel_14520/3194583613.py\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    insert_query = \"\"\"INSERT INTO PERSONS(ID,first_name,last_name,dob,email) VALUES (\"\"\"+ans=cursor.fetchone()+1+\"\"\", 'AEISHA', 'CHATURVEDI','08-07-1998','AEISHAYATURVEDI234@GMAIL.COM')\"\"\"\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot assign to operator\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Record inserted successfully\n",
+      "Result  [(2, 'SMARIDHI', 'CHATURVEDI', datetime.date(1998, 2, 4), 'STUTICHATURVEDI234@GMAIL.COM'), (4, 'SMARIDHI', 'CHATURVEDI', datetime.date(1998, 2, 4), 'STUTICHATURVEDI234@GMAIL.COM'), (5, 'SMARIDHI', 'CHATURVEDI', datetime.date(1998, 2, 4), 'STUTICHATURVEDI234@GMAIL.COM'), (6, 'SMARIDHI', 'CHATURVEDI', datetime.date(1998, 2, 4), 'STUTICHATURVEDI234@GMAIL.COM'), (1, 'susa', 'CHATURVEDI', datetime.date(1998, 2, 4), 'STUTICHATURVEDI234@GMAIL.COM'), (7, 'SMARIDHI', 'CHATURVEDI', datetime.date(1998, 2, 4), 'STUTICHATURVEDI234@GMAIL.COM'), (8, 'AEISHA', 'CHATURVEDI', datetime.date(1998, 8, 7), 'AEISHAYATURVEDI234@GMAIL.COM'), (9, 'AEISHA', 'CHATURVEDI', datetime.date(1998, 8, 7), 'AEISHAYATURVEDI234@GMAIL.COM')]\n",
+      "PostgreSQL connection is closed\n"
      ]
     }
    ],
@@ -110,7 +111,7 @@
     "    password=\"password\")\n",
     "    cursor = Conn.cursor()\n",
     "    # Executing a SQL query to insert data into  table\n",
-    "    insert_query = \"\"\"INSERT INTO PERSONS(ID,first_name,last_name,dob,email) VALUES (\"\"\"+ans=cursor.fetchone()+1+\"\"\", 'AEISHA', 'CHATURVEDI','08-07-1998','AEISHAYATURVEDI234@GMAIL.COM')\"\"\"\n",
+    "    insert_query = \"\"\"INSERT INTO PERSONS(ID,first_name,last_name,dob,email) VALUES (9, 'AEISHA', 'CHATURVEDI','08-07-1998','AEISHAYATURVEDI234@GMAIL.COM')\"\"\"\n",
     "#query='''\\COPY persons(first_name, last_name, dob, email)\n",
     "#FROM 'pers.csv' DELIMITER ',' CSV HEADER;'''\n",
     "    cursor.execute(insert_query)\n",
@@ -140,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "12f2b18d",
+   "id": "9236652d",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "97cb4136",
+   "id": "5e377849",
    "metadata": {},
    "outputs": [
     {
@@ -243,36 +244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "id": "34a64d40",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cursor.fetchone() takes no arguments (1 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14520/3531526783.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m password=\"password\")\n\u001b[0;32m      5\u001b[0m \u001b[0mcursor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mConn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mans\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcursor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfetchone\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"select ID from PERSONS\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mans\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: cursor.fetchone() takes no arguments (1 given)"
-     ]
-    }
-   ],
-   "source": [
-    "Conn = psycopg2.connect(host=\"localhost\",\n",
-    "database=\"test\",\n",
-    "user=\"postgres\",\n",
-    "password=\"password\")\n",
-    "cursor = Conn.cursor()\n",
-    "ans=cursor.fetchone()\n",
-    "print(ans)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "b5a90a76",
+   "id": "05b14444",
    "metadata": {},
    "outputs": [],
    "source": []
